# sshvault

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  crypto-design.md  roadmap.md  self-hosting.md  threat-model.md
scripts/: demo.sh
src/: crypto.rs  device.rs  lib.rs  main.rs  merge.rs  proto.rs  record.rs  relay.rs  sshconfig.rs  sync.rs  vault.rs
tests/: crypto_props.rs  device_lifecycle.rs  merge_props.rs  relay_replay.rs  relay_tls.rs  rotation.rs  shares.rs  sync_integration.rs  syncd.rs
tests/common/: mod.rs
