[package]
name = "sshvault"
version = "0.2.0"
edition = "2021"
# std::fs::File::lock / lock_shared (vault inter-process locking) landed in 1.89
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "End-to-end-encrypted sync for SSH workflows: hosts, config, snippets, port-forwards"
repository = "https://github.com/being-cheema/sshvault"
homepage = "https://github.com/being-cheema/sshvault"
readme = "README.md"
keywords = ["ssh", "sync", "encryption", "e2ee", "cli"]
categories = ["command-line-utilities", "cryptography"]
exclude = ["/docs", "/scripts", "/.github", "/tests"]

[dependencies]
# crypto — RustCrypto + dalek only (see docs/crypto-design.md)
chacha20poly1305 = "0.10"
argon2 = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
hkdf = "0.12"
sha2 = "0.10"
subtle = "2"
rand = "0.8"
bip39 = "2"

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# cli
clap = { version = "4", features = ["derive"] }
rpassword = "7"
anyhow = "1"
thiserror = "2"
dirs = "6"
hex = "0.4"
base64 = "0.22"

# relay + sync
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
# pin the rustls crypto provider explicitly: several deps pull rustls with both
# aws-lc-rs and ring, so we must install a process default before serving TLS.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

[dev-dependencies]
proptest = "1"
tempfile = "3"
rcgen = "0.13"
